Missed the dot! Refs #793

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -55,7 +55,7 @@ definitions:
         trigger: manual
         script:
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker build -t openrem/openrem:latest
+          - docker build -t openrem/openrem:latest .
           - docker push openrem/openrem
         services:
           - docker
