--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,7 @@ OpenREM.egg-info
 scratch
 stuff
 !stuff/0002_0_7_fresh_install_add_median.py.inactive
+!stuff/v1initial.py
 bitbucket*
 CHANGES
 docker*
