--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -57,9 +57,9 @@ definitions:
         trigger: manual
         script:
           - export IMAGE_NAME=openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT
-          - docker build -t $IMAGE_NAME .
+          - docker build -t openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT -t openrem/openrem:$BITBUCKET_BRANCH .
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker push $IMAGE_NAME
+          - docker push openrem/openrem
         services:
           - docker
         caches:
