Addressing codacy issues. Should make a smaller image too. Refs #793

--- a/openrem/openremproject/local_settings.py.example
+++ b/openrem/openremproject/local_settings.py.example
@@ -62,15 +62,15 @@ VIRTUAL_DIRECTORY = ''
 # to be the same for each one.
 import os
 LOG_ROOT = MEDIA_ROOT
-logfilename = os.path.join(LOG_ROOT, "openrem.log")
-qrfilename = os.path.join(LOG_ROOT, "openrem_qr.log")
-storefilename = os.path.join(LOG_ROOT, "openrem_store.log")
-extractorfilename = os.path.join(LOG_ROOT, "openrem_extractor.log")
+LOG_FILENAME = os.path.join(LOG_ROOT, "openrem.log")
+QR_FILENAME = os.path.join(LOG_ROOT, "openrem_qr.log")
+STORE_FILENAME = os.path.join(LOG_ROOT, "openrem_store.log")
+EXTRACTOR_FILENAME = os.path.join(LOG_ROOT, "openrem_extractor.log")
 
-LOGGING['handlers']['file']['filename'] = logfilename          # General logs
-LOGGING['handlers']['qr_file']['filename'] = qrfilename        # Query Retrieve SCU logs
-LOGGING['handlers']['store_file']['filename'] = storefilename  # Store SCP logs
-LOGGING['handlers']['extractor_file']['filename'] = extractorfilename  # Extractor logs
+LOGGING['handlers']['file']['filename'] = LOG_FILENAME          # General logs
+LOGGING['handlers']['qr_file']['filename'] = QR_FILENAME        # Query Retrieve SCU logs
+LOGGING['handlers']['store_file']['filename'] = STORE_FILENAME  # Store SCP logs
+LOGGING['handlers']['extractor_file']['filename'] = EXTRACTOR_FILENAME  # Extractor logs
 
 # Set log message format. Options are 'verbose' or 'simple'. Recommend leaving as 'verbose'.
 LOGGING['handlers']['file']['formatter'] = 'verbose'        # General logs
