--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 django>=2.2,<2.3
 django-filter==2.2.0
-pytz >= 0a
+pytz>=0a
 humanize==2.0.0
-pydicom >= 1.4.2
+pydicom>=1.4.2
+pynetdicom>1.4.1
 xlsxwriter==1.2.8
 celery==4.4.2
 django-qsstats-magic==1.1.0
@@ -21,4 +22,3 @@ future==0.18.2
 defusedxml==0.6.0
 psycopg2-binary==2.8.4
 gunicorn==20.0.4
--e git://git@github.com:pydicom/pynetdicom.git#egg=pynetdicom
