Commented pynetdicom out of requirements for now. Added to install docs (to be updated for docker). Refs #793

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ django-filter==2.2.0
 pytz>=0a
 humanize==2.0.0
 pydicom>=1.4.2
-pynetdicom>1.4.1
+# pynetdicom>1.4.1  disabled until 1.5 is released - tox gets upset if left in
 xlsxwriter==1.2.8
 celery==4.4.2
 django-qsstats-magic==1.1.0
