--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skipsdist = true
 
 [testenv]
 usedevelop=True
-commands = pip install psycopg2-binary
+commands = pip install git+git://github.com/pydicom/pynetdicom.git@master#egg=pynetdicom
            pip install coverage
            pip install coveralls
            pip install tblib
