Updating docs requirements.txt. Refs #820

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,25 +1,28 @@
 django>=2.2,<2.3
-django-filter
-pytz >= 0a
-humanize
-pydicom
-pynetdicom
-xlsxwriter
-celery
-django-qsstats-magic
-python-dateutil
-django-solo
-django-crispy-forms
-pandas
-xlrd
-testfixtures
-mock
-django-js-reverse >= 0.9.1
-requests
-flower
-numpy
-future
-defusedxml
+django-filter==2.2.0
+pytz>=0a
+humanize==2.0.0
+pydicom>=1.4.2
+pynetdicom==1.4.1  # current release is ok for docs probably
+xlsxwriter==1.2.8
+celery==4.4.2
+django-qsstats-magic==1.1.0
+python-dateutil==2.8.1
+django-solo==1.1.3
+django-crispy-forms==1.9.0
+pandas==1.0.2
+xlrd==1.2.0
+testfixtures==6.14.0
+mock==4.0.2
+django-js-reverse==0.9.1
+requests==2.23.0
+flower==0.9.3
+numpy==1.18.2
+future==0.18.2
+defusedxml==0.6.0
+psycopg2-binary==2.8.4
+gunicorn==20.0.4
+sphinx-issues==1.2.0
 sphinxcontrib-programoutput
 sphinxcontrib-autoprogram
 sphinx-argparse
