Pynetdicom 1.5.1 released allowing install alongside pydicom 2.0.0. Removing other refs to git version.

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,8 +2,8 @@ django>=2.2,<2.3
 django-filter==2.2.0
 pytz>=0a
 humanize==2.0.0
-pydicom>=1.4.2
-pynetdicom==1.4.1  # current release is ok for docs probably
+pydicom==2.0.0
+pynetdicom==1.5.1
 xlsxwriter==1.2.8
 celery==4.4.2
 django-qsstats-magic==1.1.0
