--- a/.pylintrc
+++ b/.pylintrc
@@ -135,7 +135,8 @@ disable=
     missing-docstring,
     invalid-name,
     bad-whitespace,
-    consider-using-enumerate
+    consider-using-enumerate,
+    bad-continuation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
