--- a/.pylintrc
+++ b/.pylintrc
@@ -136,7 +136,8 @@ disable=
     invalid-name,
     bad-whitespace,
     consider-using-enumerate,
-    bad-continuation
+    bad-continuation,
+    logging-format-interpolation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
