--- a/.pylintrc
+++ b/.pylintrc
@@ -137,7 +137,8 @@ disable=
     bad-whitespace,
     consider-using-enumerate,
     bad-continuation,
-    logging-format-interpolation
+    logging-format-interpolation,
+    logging-fstring-interpolation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
