--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,14 +13,14 @@ definitions:
         POSTGRES_DB: openremdb
         POSTGRES_USER: openremuser
         POSTGRES_PASSWORD: openremuserpass
-    docker:
-      memory: 2048
+#    docker:
+#      memory: 2048
   steps:
     - step: &sonarcloud
         name: run code quality tests
         caches:
           - sonar
-        size: 2x
+#        size: 2x
         script:
           - pipe: sonarsource/sonarcloud-scan:1.0.1
           - pipe: sonarsource/sonarcloud-quality-gate:0.1.3
