Didn't work. adding debug and hopefully docker image cache. Refs #841

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,9 +20,12 @@ definitions:
         name: run code quality tests
         caches:
           - sonar
+          - docker
 #        size: 2x
         script:
           - pipe: sonarsource/sonarcloud-scan:1.0.1
+            variables:
+              DEBUG: 'true'
           - pipe: sonarsource/sonarcloud-quality-gate:0.1.3
     - step: &test
         name: run django tests
