--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -46,7 +46,8 @@ definitions:
             sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
           - mv openrem/openremproject/wsgi.py{.example,}
 #          - pip install -U tox
-          - pip install -r requirements.txt
+          - pip install -e .
+#          - pip install -r requirements.txt
           - pip install coverage
           - pip install coveralls
           - pip install tblib
