Need to create artifact to pass coverage report between steps. Refs #841

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -57,6 +57,8 @@ definitions:
           - coveralls
           - coverage xml
 #          - tox -e ci
+        artifacts:
+          - coverage.xml
         services:
           - postgres
         caches:
