--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -29,7 +29,7 @@ definitions:
         caches:
           - sonar
           - docker
-#        size: 2x
+        size: 2x
         script:
           - pipe: sonarsource/sonarcloud-quality-gate:0.1.3
             variables:
