--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,8 +13,8 @@ definitions:
         POSTGRES_DB: openremdb
         POSTGRES_USER: openremuser
         POSTGRES_PASSWORD: openremuserpass
-#    docker:
-#      memory: 3072
+    docker:
+      memory: 128
   steps:
     - step: &sonarcloud
         name: run sonarcloud scan
