First attempt at running flake8 in the pipeline. Refs #841

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,6 +16,11 @@ definitions:
     docker:
       memory: 3072
   steps:
+    - step: &flake8
+        name: run flake8
+        script:
+          - pip install flake8
+          - flake8 --select=C,E,F,W,B,B950 --ignore=E203,E501,W503 --max-line-length=120 . > flake8.txt
     - step: &sonarcloud
         name: run sonarcloud scan
         caches:
@@ -102,15 +107,17 @@ definitions:
           - docker
 pipelines:
   default:  # Standard commits are tested but not deployed
-    - step: *test
+    - step: *flake8
     - step: *sonarcloud
     - step: *sonarcloudqualitygate
+    - step: *test
   branches:
     develop:  # Commits to the develop branch are tested and deployed to dev.openrem.org on success
+      - step: *flake8
+      - step: *sonarcloud
       - step:
           <<: *test
           name: run django tests - develop
-      - step: *sonarcloud
       - step: *deploy-to-openrem-org
       - step: *build-and-deploy-to-docker
     master:  # Commits to the master branch are tested and pushed to Docker Hub
