--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,7 +20,9 @@ definitions:
         name: run flake8
         script:
           - pip install flake8
-          - flake8 --select=C,E,F,W,B,B950 --ignore=E203,E501,W503 --max-line-length=120 . > flake8.txt
+          - flake8 --select=C,E,F,W,B,B950 --ignore=E203,E501,W503 --max-line-length=120
+        caches:
+          - pip
     - step: &sonarcloud
         name: run sonarcloud scan
         caches:
