--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,9 +20,12 @@ definitions:
         name: run flake8
         script:
           - pip install flake8
+          - mkdir test-reports
           - flake8 --select=C,E,F,W,B,B950 --ignore=E203,E501,W503 --max-line-length=120 --exit-zero > test-reports/flake8.txt
         caches:
           - pip
+        artifacts:
+          - test-reports/flake8.txt
     - step: &sonarcloud
         name: run sonarcloud scan
         caches:
