Setting the flake8 step as manual so it doesn't need to be run on every commit. Expect to run it on pull requests, but not otherwise unless desired to save run minutes.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,6 +18,7 @@ definitions:
   steps:
     - step: &flake8
         name: run flake8
+        trigger: manual
         script:
           - pip install flake8
           - mkdir test-reports
