--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -38,6 +38,7 @@ definitions:
           - docker
     - step: &sonarcloudqualitygate
         name: run sonarcloud quality gate
+        trigger: manual
         caches:
           - sonar
           - docker
@@ -86,6 +87,7 @@ definitions:
           - pip
     - step: &deploy-to-openrem-org
         name: deploy to $server
+        trigger: manual
         deployment: develop  # deployment has $server as a variable = dev.openrem.org
         script:
           - mkdir -p ~/.ssh
@@ -128,8 +130,10 @@ pipelines:
           name: run django tests - develop
       - step: *flake8
       - step: *sonarcloud
-      - step: *deploy-to-openrem-org
-      - step: *build-and-deploy-to-docker
+      - parallel:
+        - step: *sonarcloudqualitygate
+        - step: *deploy-to-openrem-org
+        - step: *build-and-deploy-to-docker
     master:  # Commits to the master branch are tested and pushed to Docker Hub
       - step:
           <<: *test
@@ -137,7 +141,9 @@ pipelines:
           deployment: Staging
       - step: *flake8
       - step: *sonarcloud
-      - step: *build-and-deploy-to-docker
+      - parallel:
+        - step: *sonarcloudqualitygate
+        - step: *build-and-deploy-to-docker
     '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
       - step:
           <<: *test
