--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -38,7 +38,6 @@ definitions:
           - docker
     - step: &sonarcloudqualitygate
         name: run sonarcloud quality gate
-        trigger: manual
         caches:
           - sonar
           - docker
@@ -118,6 +117,15 @@ definitions:
         caches:
           - docker
 pipelines:
+  custom:
+    deploy-to-demo:
+      - step: *deploy-to-openrem-org
+    deploy-to-test:
+      - step:
+          <<: *deploy-to-openrem-org
+          deployment: testing  # deployment has $server as a variable = testing.openrem.org
+    deploy-to-docker:
+      - step: *build-and-deploy-to-docker
   default:  # Standard commits are tested but not deployed
     - step: *test
     - step: *flake8
@@ -130,10 +138,7 @@ pipelines:
           name: run django tests - develop
       - step: *flake8
       - step: *sonarcloud
-      - parallel:
-        - step: *sonarcloudqualitygate
-        - step: *deploy-to-openrem-org
-        - step: *build-and-deploy-to-docker
+      - step: *sonarcloudqualitygate
     master:  # Commits to the master branch are tested and pushed to Docker Hub
       - step:
           <<: *test
@@ -141,9 +146,7 @@ pipelines:
           deployment: Staging
       - step: *flake8
       - step: *sonarcloud
-      - parallel:
-        - step: *sonarcloudqualitygate
-        - step: *build-and-deploy-to-docker
+      - step: *sonarcloudqualitygate
     '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
       - step:
           <<: *test
