Mis-named deployment step - changing to avoid confusion! demo is from master, dev is from develop.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -116,7 +116,7 @@ definitions:
           - docker
 pipelines:
   custom:
-    deploy-to-demo:
+    deploy-to-dev:
       - step: *deploy-to-openrem-org
     deploy-to-test:
       - step:
