--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-solo==1.1.3
 django-crispy-forms==1.9.0
 pandas==1.0.2
 altair==4.1.0
+plotly==4.9.0
 xlrd==1.2.0
 testfixtures==6.14.0
 mock==4.0.2
