--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-dateutil==2.8.1
 django-solo==1.1.3
 django-crispy-forms==1.9.0
 pandas==1.0.2
-altair==4.1.0
+matplotlib==3.3.2
 plotly==4.9.0
 xlrd==1.2.0
 testfixtures==6.14.0
