Added ref #828 to changes. Adapted local_settings.py.example to match Docker env format.

--- a/openrem/openremproject/local_settings.py.example
+++ b/openrem/openremproject/local_settings.py.example
@@ -118,13 +118,13 @@ JAVA_OPTIONS = '-Xms256m -Xmx512m -Xss1m -cp'
 PIXELMED_JAR = 'C:\\Users\\David\\Apps\\doseUtility\\pixelmed.jar'
 PIXELMED_JAR_OPTIONS = '-Djava.awt.headless=true com.pixelmed.doseocr.OCR -'
 
-# E-mail server settings - see https://docs.djangoproject.com/en/1.8/topics/email/
+# E-mail server settings - see https://docs.djangoproject.com/en/2.2/topics/email/
 EMAIL_HOST = 'localhost'
 EMAIL_PORT = 25
 EMAIL_HOST_USER = ''
 EMAIL_HOST_PASSWORD = ''
-EMAIL_USE_TLS = False
-EMAIL_USE_SSL = False
+EMAIL_USE_TLS = 0         # Use 0 for False, 1 for True
+EMAIL_USE_SSL = 0         # Use 0 for False, 1 for True
 EMAIL_DOSE_ALERT_SENDER = 'your.alert@email.address'
 EMAIL_OPENREM_URL = 'http://your.openrem.server'
 
