--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-js-reverse==0.9.1
 requests==2.23.0
 flower==0.9.3
 numpy==1.18.2
+scipy==1.5.2
 future==0.18.2
 defusedxml==0.6.0
 psycopg2-binary==2.8.4
