--- a/.pylintrc
+++ b/.pylintrc
@@ -138,7 +138,8 @@ disable=
     consider-using-enumerate,
     bad-continuation,
     logging-format-interpolation,
-    logging-fstring-interpolation
+    logging-fstring-interpolation,
+    D203
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
