--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 openrem/remapp/migrations/0*
 .idea
 .venv
+settings.json
 openrem/openremproject/local_settings.py
 openrem/openremproject/wsgi.py
 
