first draft of varic import code. Refs #433

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ openrem/remapp/migrations/0*
 .idea
 .venv
 settings.json
+launch.json
 openrem/openremproject/local_settings.py
 openrem/openremproject/wsgi.py
 
