--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-django>=2.2,<2.3
-django-filter==2.2.0
+django>=3.2,<4
+django-filter
 pytz>=0a
-humanize==2.0.0
-pydicom==2.0.0
-pynetdicom>=1.5.1,<1.6
-xlsxwriter==1.2.8
-django-qsstats-magic==1.1.0
-python-dateutil==2.8.1
-django-solo==1.1.3
-django-crispy-forms==1.9.0
-pandas==1.3.3
-matplotlib==3.4.3
-plotly==5.3.1
-xlrd==1.2.0
-testfixtures==6.14.0
-mock==4.0.2
-django-js-reverse==0.9.1
-requests==2.23.0
-numpy==1.21.2
-scipy==1.7.1
-defusedxml==0.6.0
-psycopg2-binary==2.8.6
-gunicorn==20.0.4
+humanize
+pydicom
+pynetdicom
+xlsxwriter
+django-qsstats-magic
+python-dateutil
+django-solo
+django-crispy-forms
+pandas
+matplotlib
+plotly
+xlrd
+testfixtures
+mock
+django-js-reverse
+requests
+numpy
+scipy
+defusedxml
+psycopg2-binary
+gunicorn
