--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
 django>=3.2,<4
-django-filter
+django-filter==22.1
 pytz>=0a
-humanize
-pydicom
-pynetdicom
-xlsxwriter
-python-dateutil
-django-solo
-django-crispy-forms
-pandas
-matplotlib
+humanize>=4.2,<4.3
+pydicom>=2.3,<2.4
+pynetdicom>=2.0.2,<2.1
+xlsxwriter>=3.0.3,<3.1
+django-solo>=2,<2.1
+django-crispy-forms>=1.14,<1.15
+pandas>=1.4.2,<1.5
+matplotlib>=3.5.2,<3.6
 plotly==5.8.2
-openpyxl
-testfixtures
-mock
-django-js-reverse
-requests
-numpy
-scipy
-defusedxml
-psycopg2-binary
-gunicorn
+openpyxl>=3.0.10,<3.1
+testfixtures>=6.18.5,<6.19
+mock>=4.0.3,<4.1
+django-js-reverse>=0.9.1
+requests>=2.28,<2.29
+numpy>=1.22.4,<1.23
+scipy>=1.8.1,<1.9
+defusedxml>=0.7.1,<0.8
+psycopg2-binary>=2.9.3,<2.10
+gunicorn>=20.1,<20.2
