Docker build was completing, issue was with not specifying tag. Refs #940

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -176,7 +176,7 @@ definitions:
           - export IMAGE_NAME=openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT
           - docker build -t openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT -t openrem/openrem:$BITBUCKET_BRANCH .
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker push openrem/openrem
+          - docker push --all-tags openrem/openrem
         services:
           - docker
         caches:
