--- a/openrem/openremproject/local_settings.py.example
+++ b/openrem/openremproject/local_settings.py.example
@@ -21,14 +21,14 @@ DATABASES = {
 
 # Absolute filesystem path to the directory that will hold xlsx and csv
 # exports patient size import files
-# Linux example: "/var/openrem/media/"
-# Windows example: "C:/Users/myusername/Documents/OpenREM/media/"
+# Linux example: '/var/openrem/media/'
+# Windows example: 'C:/Users/myusername/Documents/OpenREM/media/'
 MEDIA_ROOT = ''
 
 # Absolute path to the directory static files should be collected to.
 # Don't put anything in this directory yourself; store your static files
-# in apps' "static/" subdirectories and in STATICFILES_DIRS.
-# Example: "/home/media/media.lawrence.com/static/"
+# in apps' 'static/' subdirectories and in STATICFILES_DIRS.
+# Example: '/home/media/media.lawrence.com/static/'
 STATIC_ROOT = ''
 JS_REVERSE_OUTPUT_PATH = os.path.join(STATIC_ROOT, 'js', 'django_reverse')
 
@@ -62,10 +62,10 @@ VIRTUAL_DIRECTORY = ''
 # systems you might put these in a subdirectory of /var/log/. If you want all the logs in one file, set the filename
 # to be the same for each one.
 LOG_ROOT = MEDIA_ROOT
-LOG_FILENAME = os.path.join(LOG_ROOT, "openrem.log")
-QR_FILENAME = os.path.join(LOG_ROOT, "openrem_qr.log")
-STORE_FILENAME = os.path.join(LOG_ROOT, "openrem_store.log")
-EXTRACTOR_FILENAME = os.path.join(LOG_ROOT, "openrem_extractor.log")
+LOG_FILENAME = os.path.join(LOG_ROOT, 'openrem.log')
+QR_FILENAME = os.path.join(LOG_ROOT, 'openrem_qr.log')
+STORE_FILENAME = os.path.join(LOG_ROOT, 'openrem_store.log')
+EXTRACTOR_FILENAME = os.path.join(LOG_ROOT, 'openrem_extractor.log')
 
 LOGGING['handlers']['file']['filename'] = LOG_FILENAME          # General logs
 LOGGING['handlers']['qr_file']['filename'] = QR_FILENAME        # Query Retrieve SCU logs
