Attempting to correctly set MEDIA_ROOT back to '' for testing. Refs #657

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -88,7 +88,7 @@ definitions:
           - mv openrem/openremproject/local_settings.py{.linux,}
           - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
           - >-
-            sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql_psycopg2'," openrem/openremproject/local_settings.py
+            sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql'," openrem/openremproject/local_settings.py
           - >-
             sed -i "/'NAME':/c\        'NAME': 'openremdb'," openrem/openremproject/local_settings.py
           - >-
@@ -100,7 +100,7 @@ definitions:
           - >-
             sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
           - >-
-            sed -i "/MEDIA_ROOT:/c\MEDIA_ROOT = ''" openrem/openremproject/local_settings.py
+            sed -i "/MEDIA_ROOT/c\MEDIA_ROOT = ''" openrem/openremproject/local_settings.py
           - mv openrem/openremproject/wsgi.py{.example,}
           - pip install -e .
           - pip install coverage
