--- a/.pylintrc
+++ b/.pylintrc
@@ -545,6 +545,8 @@ max-statements=50
 # Minimum number of public methods for a class (see R0903).
 min-public-methods=2
 
+# Set maximum complexity allowed before McCabe code complexity flags as an issue
+max-complexity=70
 
 [EXCEPTIONS]
 
