--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -117,6 +117,41 @@ definitions:
           - postgres
         caches:
           - pip
+    - step: &test-all
+        name: run django tests tagged as slow
+        script:
+          - mv openrem/openremproject/local_settings.py{.linux,}
+          - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/'ENGINE':/c\        'ENGINE': 'django.db.backends.postgresql'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/'NAME':/c\        'NAME': 'openremdb'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/'USER':/c\        'USER': 'openremuser'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/'PASSWORD':/c\        'PASSWORD': 'openremuserpass'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/'HOST':/c\        'HOST': '127.0.0.1'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/^MEDIA_ROOT/c\MEDIA_ROOT = ''" openrem/openremproject/local_settings.py
+          - mv openrem/openremproject/wsgi.py{.example,}
+          - pip install -e .
+          - pip install coverage
+          - pip install coveralls
+          - pip install tblib
+          - python openrem/manage.py makemigrations remapp
+          - coverage run openrem/manage.py test remapp --parallel
+          - coverage combine
+          - coveralls
+          - coverage xml
+        artifacts:
+          - coverage.xml
+        services:
+          - postgres
+        caches:
+          - pip
     - step: &test-python3.8
         trigger: manual
         image: python:3.8
@@ -240,6 +275,7 @@ pipelines:
       - step: *test-slow
   default:  # Standard commits are tested but not deployed
     - step: *test
+    - step: *test-slow
     - step: *flake8
     - step: *sonarcloud
     - step: *sonarcloudqualitygate
@@ -256,7 +292,7 @@ pipelines:
       - step: *deploy-to-openrem-org
     master:  # Commits to the master branch are tested and pushed to Docker Hub
       - step:
-          <<: *test
+          <<: *test-all
           name: run django tests - master
           deployment: Staging
       - step: *flake8
@@ -264,14 +300,14 @@ pipelines:
       - step: *sonarcloudqualitygate
     '*stage':  # Commits to any branch ending in 'stage' are tested and deployed to testing.openrem.org
       - step:
-          <<: *test
+          <<: *test-all
           name: run django tests - testing
       - step:
           <<: *deploy-to-openrem-org
           deployment: testing  # deployment has $server as a variable = testing.openrem.org
     '*docker':  # Commits to any branch ending in 'docker' are tested and deployed to docker hub. Will add to develop
       - step:
-          <<: *test
+          <<: *test-all
           name: run django tests - testing
       - step:
           <<: *build-and-deploy-to-docker
