Removing manual trigger completely to see if it runs

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -156,7 +156,7 @@ definitions:
     - step: &test-python3.8
         image: python:3.8
         name: Python 3.8 test
-        trigger: manual
+#        trigger: manual
         script:
           - mv openrem/openremproject/local_settings.py{.linux,}
           - sed -i "s/INFO/DEBUG/g" openrem/openremproject/local_settings.py
