Try pipeline from within the openrem folder? Refs #909

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -142,8 +142,9 @@ definitions:
           - pip install coverage
           - pip install coveralls
           - pip install tblib
-          - python openrem/manage.py makemigrations remapp
-          - coverage run openrem/manage.py test remapp --parallel
+          - cd openrem
+          - python manage.py makemigrations remapp
+          - coverage run manage.py test remapp --parallel
           - coverage combine
           - coveralls
           - coverage xml
