--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -71,9 +71,8 @@ definitions:
           - pip install coverage
           - pip install coveralls
           - pip install tblib
-          - cd openrem
-          - python manage.py makemigrations remapp
-          - coverage run manage.py test remapp --parallel --exclude-tag=slow
+          - python openrem/manage.py makemigrations remapp
+          - coverage run openrem/manage.py test remapp --parallel --exclude-tag=slow
           - coverage combine
           - coveralls
           - coverage xml
@@ -143,9 +142,8 @@ definitions:
           - pip install coverage
           - pip install coveralls
           - pip install tblib
-          - cd openrem
-          - python manage.py makemigrations remapp
-          - coverage run manage.py test remapp --parallel
+          - python openrem/manage.py makemigrations remapp
+          - coverage run openrem/manage.py test remapp --parallel
           - coverage combine
           - coveralls
           - coverage xml
