Setting LOG_ROOT to '' to match MEDIA_ROOT. Refs #657.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -66,6 +66,8 @@ definitions:
             sed -i "/'PORT':/c\        'PORT': '5432'," openrem/openremproject/local_settings.py
           - >-
             sed -i "/^MEDIA_ROOT/c\MEDIA_ROOT = ''" openrem/openremproject/local_settings.py
+          - >-
+            sed -i "/^LOG_ROOT/c\LOG_ROOT = ''" openrem/openremproject/local_settings.py
           - mv openrem/openremproject/wsgi.py{.example,}
           - pip install -e .
           - pip install coverage
